Salesforce Template Application/force-app/main/default/objects/LogMessageEvent__e/LogMessageEvent__e.object-meta.xml
<CustomObject>
    <description>Log Messages</description>
    <label>Log Message Event</label>
    <pluralLabel>Log Message Events</pluralLabel>
</CustomObject>