Salesforce Template Application/force-app/main/default/objects/LogMessageEvent__e/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>Class Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>