Salesforce Template Application/force-app/main/default/objects/LogMessageEvent__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>