Salesforce Template Application/force-app/main/default/objects/LogMessageEvent__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>