Salesforce Template Application/force-app/main/default/objects/LogMessageEvent__e/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>